# cosmicpython-fastapi

./: .codeclimate.yml  .env  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Allocation.md  Dockerfile  README.md  Readme.md  _arb_translation__202304162309.json  alembic.ini  app.py  docker-compose.yaml  docker-compose.yml  extensions.py  fail-pylint.py  pylint-ci.py  pyproject.toml  requirements.txt  tailwind.config.js  webhook_logs.txt  wsgi.py
arb/: models.py  routes.py  test.py
arb/fixtures/: _arb_translation.py  _arb_translation__2023_04_22.py  upload_fixtures.py
assets/: .$Allocationd.drawio.bkp  .$Allocationd.drawio.dtmp  Allocationd.drawio
auth/: models.py  routes.py
auth/util/: create_admin.py
control-flow/: python-iterators.py
cosmic-python-allocation/: ReadMe.md  pyproject.toml
database/: env.py
database/versions/: 07f4dff13545_create_outbox_model.py  27e5856f13a2_make_all_not_nullable.py  298b6aa88bb1_create_order_read_model.py  33416e340a44_create_outbox_model.py  36d489590f68_create_outbox_model.py  4abd7c52d8cf_create_order_read_model.py  5acf7bd858af_create_outbox_model.py  ae142dca3487_create_outbox_model.py  c250bf67bf7e_create_order_read_model.py  ca0315cd993b_cqsp.py  ce5eef437e95_create_product_batch_tables.py  d20d049c31a3_add_product_defaults.py  dc3376cff940_rename_product.py  e7fe138173c6_make_all_not_nullable.py  eb38d551d6cc_initial_full_schema_creation.py  ef873be591af_initial_migration.py
entrypoints/: app.py  relayer.py  worker.py
instance/: arb.sqlite3
instance-db/: arb.sqlite3
migrations/: env.py
shared/: validations.py
src/: .env.test  app.py  bootstrap.py  conf.py  config.py  conftest.py  constants.py  database.db  service_manager.py  settings.py
src/adapters/: email.py  (+6 more)
templates/: arb-completed.html  arb-details.html  arb-form.html  arb-main-form.html  arb-main.html  arb-modal.html
testing-src/: server.py
(+238 files in other folders)
