[tool.poetry]
name = "cosmicpython"
version = "0.1.0"
description = ""
authors = ["dianamatkava <dianamatkava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.13.0"
pylint = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
