[tool.poetry]
name = "allocation"
version = "0.1.0"
description = ""
authors = ["dianamatkava <dianamatkava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
plantuml = "^0.3.0"
six = "^1.17.0"
pytest = "^8.3.4"
sqlmodel = "^0.0.22"
uvicorn = "^0.34.0"
fastapi-cli = "^0.0.7"
mypy = "^1.13.0"
pylint = "^3.3.2"
factory-boy = "^3.3.3"
requests = "^2.32.3"
httpx = "^0.28.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
