[tool.poetry]
name = "allocation"
version = "0.1.0"
description = ""
authors = ["dianamatkava <dianamatkava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
plantuml = "^0.3.0"
six = "^1.17.0"
pytest = "^8.3.4"
sqlmodel = "^0.0.22"
uvicorn = "^0.34.0"
fastapi-cli = "^0.0.7"
mypy = "^1.13.0"
pylint = "^3.3.2"
factory-boy = "^3.3.3"
requests = "^2.32.3"
httpx = "^0.28.1"
psycopg2 = "^2.9.10"
pytest-dotenv = "^0.5.2"
sqlalchemy-utils = "^0.41.2"
pre-commit = "^4.2.0"
ruff = "^0.11.12"
alembic = "^1.16.1"
pytest-mock = "^3.14.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
env_files = ["src/.env.test"]

[tool.mypy]
files = ["src"]
mypy_path = ["src"]
exclude = [
  "^src/units/.*",
  "^src/.*/__deprecated/.*",
  "^assets/.*",
  "^migrations/.*",
]
ignore_missing_imports=true
